fix: restore explicit allowed origin patterns for CORS